# src/main/java/br/com/fiap/postech/doctor/domain/DoctorProvider.java
@@ -1,0 +1,7 @@
+package br.com.fiap.postech.doctor.domain;
+
+import br.com.fiap.postech.doctor.domain.entity.Doctor;
+
+public interface DoctorProvider {
+    Doctor createDoctor(Doctor doctor);
+}
