# src/main/java/br/com/fiap/postech/doctor/infra/exception/ExceptionGlobalHandler.java
@@ -1,0 +1,26 @@
+package br.com.fiap.postech.doctor.infra.exception;
+
+import br.com.fiap.postech.doctor.model.ErrorResponse;
+import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.RestControllerAdvice;
+
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.UUID;
+
+@RestControllerAdvice
+public class ExceptionGlobalHandler {
+
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    public ErrorResponse handleMethodArgumentNotValidException(MethodArgumentNotValidException e) {
+        List<String> errors = e.getBindingResult().getFieldErrors().stream()
+                .map(error -> error.getField() + ": " + error.getDefaultMessage())
+                .toList();
+        return ErrorResponse.builder()
+                .traceId(UUID.randomUUID().toString())
+                .timestamp(LocalDateTime.now().toString())
+                .message(errors)
+                .build();
+    }
+}
